z-index bug fix

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -48,7 +48,7 @@ header {
 
   left: 0;
   top: 0;
-  z-index: 99;
+  z-index: 5;
 
   position: sticky;
   @include media-min(lg) {
