--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -11,7 +11,7 @@ $border-radius: 1rem;
   text-align: left;
   display: none; // Hidden by default
   position: fixed; // Stay in place
-  z-index: 1;
+  z-index: 10;
   padding-top: 2rem; // Location of the box
   left: 0;
   top: 0;
